# konstantin-gear-academy

./: README.md
hello-world/: .metahash  Cargo.toml  build.rs  hello_world.meta.txt
hello-world/io/: Cargo.toml
hello-world/io/src/: lib.rs
hello-world/src/: lib.rs
hello-world/tests/: hello_world_test.rs
simple-escrow/: .binpath  Cargo.toml  build.rs
simple-escrow/io/: Cargo.toml
simple-escrow/io/src/: lib.rs
simple-escrow/src/: lib.rs
simple-escrow/tests/: confirm_delivery_test.rs  deposit_test.rs
simple-escrow/tests/utilts/: check.rs  fail.rs  mod.rs
tamagotchi/: .metahash  Cargo.toml  build.rs  tamagotchi.meta.txt
tamagotchi/io/: Cargo.toml
tamagotchi/io/src/: lib.rs
tamagotchi/src/: lib.rs
